# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  README.md  backend-tool-refactor.md  check.sh  format.sh  frontend-changes.md  pyproject.toml  run.sh
.claude/commands/: important-feature.md
backend/: ai_generator.py  config.py  vector_store.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_config.py  test_integration.py  test_rag_system.py  test_search_tools.py  test_vector_store.py
frontend/: index.html  script.js  style.css
